{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "5ee93d65-6806-4abe-a39b-c662c3b6d28b",
            "actions": [
                {
                    "name": "Mover",
                    "type": "Value",
                    "id": "f74b2535-fce7-40ed-b1fe-8c8c0ea85983",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickItem",
                    "type": "Button",
                    "id": "ba68bc8f-73a3-4723-9b21-2f4529ce4b9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "84d8077d-8038-40cc-9870-9b5dbcd43174",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b3c07620-db6f-4d80-b512-2f36d6a0089a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8e4f2358-f0ed-4b0e-b63a-9a3d339df410",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a46a9739-d937-428c-ab38-7bb1d5c1d0f4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2feb61b7-ae82-453f-81f9-c088bd60f1d4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d6cd70d7-b31c-41c5-8e80-26b07b909303",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "03fdd13d-9bbf-49a0-8942-ed2dffea4dd2",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc2d9420-e7f1-432a-9faf-1c65e58e0b15",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}